--- a/service-backendpolicy.yaml
+++ b/service-backendpolicy.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: app1
 spec:
   selector:
-    app: simple-webapp
+    app: iapgw-webapp
   ports:
   - port: 80
     targetPort: 80
@@ -18,7 +18,7 @@ metadata:
   namespace: app2
 spec:
   selector:
-    app: simple-webapp
+    app: iapgw-webapp
   ports:
   - port: 80
     targetPort: 80
